<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4C739"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/fruit_big_letter_label_id"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/fruit_big_label"
            android:padding="10dip"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fruit_label_id"
            android:layout_width="134dp"
            android:layout_height="90dp"
            android:hint="@string/fruit_label"
            android:padding="10dip"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/fruitImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fruitImageBorder"
        android:layout_weight="1"
        android:contentDescription="TODO"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <Button
            android:id="@+id/prevButtonId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/prev" />

        <Button
            android:id="@+id/menuButtonId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu" />

        <Button
            android:id="@+id/nextButtonId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>